update demo and clean dpm

--- a/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
+++ b/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
@@ -3,16 +3,26 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Semeval 2022 - Task 4 - Demo",
+      "name": "Semeval_2022_Task_4_Demo.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.10"
     }
   },
   "cells": [
@@ -26,7 +36,7 @@
         "import os\n",
         "from urllib import request"
       ],
-      "execution_count": 5,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -69,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6MWC6jV16zt6",
-        "outputId": "e10193f5-128e-4951-9dca-0461955ca745"
+        "outputId": "fadb2fb4-6394-48dc-ab65-10ff82a5ce98"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/dont_patronize_me.py\"\n",
@@ -80,7 +90,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 6,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VrDVHr6SAv0I",
-        "outputId": "6cdf5134-d6e7-48e2-8d3a-3381b4c25159"
+        "outputId": "6870b61b-efe1-4149-d3dd-e1a9bfaed988"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/evaluation.py\"\n",
@@ -120,7 +130,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 7,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,13 +160,13 @@
       "source": [
         "from dont_patronize_me import DontPatronizeMe\n",
         "# Initialize a dpm (Don't Patronize Me) object.\n",
-        "# It takes two areguments as input: \n",
+        "# It takes two arguments as input: \n",
         "# (1) Path to the training set, which is the root directory of this notebook.\n",
         "# (2) Path to the test set, which will be released when the evaluation phase begins. \n",
         "# For now, you can just use the dataset for Subtask 1, which the code will load without labels.\n",
         "dpm = DontPatronizeMe('.', 'dontpatronizeme_pcl.tsv')"
       ],
-      "execution_count": 8,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -175,10 +185,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 198
         },
         "id": "xBNfZFPq6VgX",
-        "outputId": "9222f030-8104-4c7e-c549-94a4e1a1390e"
+        "outputId": "4a5df1f2-0fb1-4a4b-8ecf-17519e48292f"
       },
       "source": [
         "# This method loads the subtask 1 data\n",
@@ -186,7 +196,7 @@
         "# which we can then access as a dataframe\n",
         "dpm.train_task1_df.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,34 +220,64 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>par_id</th>\n",
+              "      <th>art_id</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>country</th>\n",
               "      <th>text</th>\n",
-              "      <th>labels</th>\n",
+              "      <th>label</th>\n",
+              "      <th>orig_label</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>the ones in need of constant medical care are ...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>@@24942188</td>\n",
+              "      <td>hopeless</td>\n",
+              "      <td>ph</td>\n",
+              "      <td>we 're living in times of absolute insanity , ...</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>nbc and spanish-language univision both declin...</td>\n",
+              "      <td>2</td>\n",
+              "      <td>@@21968160</td>\n",
+              "      <td>migrant</td>\n",
+              "      <td>gh</td>\n",
+              "      <td>in libya today , there are countless number of...</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>a second t-home project is being launched in t...</td>\n",
+              "      <td>3</td>\n",
+              "      <td>@@16584954</td>\n",
+              "      <td>immigrant</td>\n",
+              "      <td>ie</td>\n",
+              "      <td>\"white house press secretary sean spicer said ...</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>camfed would like to see this trend reversed ....</td>\n",
-              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>@@7811231</td>\n",
+              "      <td>disabled</td>\n",
+              "      <td>nz</td>\n",
+              "      <td>council customers only signs would be displaye...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>kagunga village was reported to lack necessary...</td>\n",
+              "      <td>5</td>\n",
+              "      <td>@@1494111</td>\n",
+              "      <td>refugee</td>\n",
+              "      <td>ca</td>\n",
+              "      <td>\"\"\" just like we received migrants fleeing el ...</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -245,16 +285,18 @@
               "</div>"
             ],
             "text/plain": [
-              "                                                text  labels\n",
-              "0  the ones in need of constant medical care are ...       0\n",
-              "1  nbc and spanish-language univision both declin...       0\n",
-              "2  a second t-home project is being launched in t...       0\n",
-              "3  camfed would like to see this trend reversed ....       1\n",
-              "4  kagunga village was reported to lack necessary...       0"
+              "  par_id      art_id  ... label orig_label\n",
+              "0      1  @@24942188  ...     0          0\n",
+              "1      2  @@21968160  ...     0          0\n",
+              "2      3  @@16584954  ...     0          0\n",
+              "3      4   @@7811231  ...     0          0\n",
+              "4      5   @@1494111  ...     0          0\n",
+              "\n",
+              "[5 rows x 7 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 93
         }
       ]
     },
@@ -274,19 +316,26 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 216
         },
         "id": "vfLpiw568iCQ",
-        "outputId": "c6cc0c73-abb7-48a0-f31f-10239fc0e636"
+        "outputId": "f5cdd415-d13d-4c19-f7aa-844dacc4b077"
       },
       "source": [
-        "# Same for subtask 2\n",
-        "dpm.load_task2()\n",
+        "# Same for subtask 2, we must pass return_one_hot=True to the constructor to get valid labels\n",
+        "dpm.load_task2(return_one_hot=True)\n",
         "# which we can then access as a dataframe\n",
         "dpm.train_task2_df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 94,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Authority_voice': 0, 'Unbalanced_power_relations': 1, 'Shallow_solution': 2, 'Presupposition': 3, 'Compassion': 4, 'Metaphors': 5, 'The_poorer_the_merrier': 6}\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -309,51 +358,77 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>par_id</th>\n",
+              "      <th>art_id</th>\n",
               "      <th>text</th>\n",
-              "      <th>labels</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>country</th>\n",
+              "      <th>label</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>4046</td>\n",
+              "      <td>@@14767805</td>\n",
               "      <td>we also know that they can benefit by receivin...</td>\n",
+              "      <td>hopeless</td>\n",
+              "      <td>us</td>\n",
               "      <td>[1, 1, 0, 0, 0, 0, 0]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
+              "      <td>1279</td>\n",
+              "      <td>@@7896098</td>\n",
               "      <td>pope francis washed and kissed the feet of mus...</td>\n",
+              "      <td>refugee</td>\n",
+              "      <td>ng</td>\n",
               "      <td>[0, 0, 1, 0, 0, 0, 0]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>8330</td>\n",
+              "      <td>@@17252299</td>\n",
               "      <td>many refugees do n't want to be resettled anyw...</td>\n",
+              "      <td>refugee</td>\n",
+              "      <td>ng</td>\n",
               "      <td>[0, 0, 0, 1, 0, 0, 0]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>budding chefs , like \" fred \" , \" winston \" an...</td>\n",
+              "      <td>4063</td>\n",
+              "      <td>@@3002894</td>\n",
+              "      <td>\"budding chefs , like \"\" fred \"\" , \"\" winston ...</td>\n",
+              "      <td>in-need</td>\n",
+              "      <td>ie</td>\n",
               "      <td>[1, 1, 0, 0, 1, 1, 0]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>in a 90-degree view of his constituency , one ...</td>\n",
-              "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+              "      <td>4089</td>\n",
+              "      <td>@@25597822</td>\n",
+              "      <td>\"in a 90-degree view of his constituency , one...</td>\n",
+              "      <td>homeless</td>\n",
+              "      <td>pk</td>\n",
+              "      <td>[0, 1, 0, 0, 0, 0, 0]</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                                text                 labels\n",
-              "0  we also know that they can benefit by receivin...  [1, 1, 0, 0, 0, 0, 0]\n",
-              "1  pope francis washed and kissed the feet of mus...  [0, 0, 1, 0, 0, 0, 0]\n",
-              "2  many refugees do n't want to be resettled anyw...  [0, 0, 0, 1, 0, 0, 0]\n",
-              "3  budding chefs , like \" fred \" , \" winston \" an...  [1, 1, 0, 0, 1, 1, 0]\n",
-              "4  in a 90-degree view of his constituency , one ...  [1, 0, 0, 0, 0, 0, 0]"
+              "  par_id      art_id  ... country                  label\n",
+              "0   4046  @@14767805  ...      us  [1, 1, 0, 0, 0, 0, 0]\n",
+              "1   1279   @@7896098  ...      ng  [0, 0, 1, 0, 0, 0, 0]\n",
+              "2   8330  @@17252299  ...      ng  [0, 0, 0, 1, 0, 0, 0]\n",
+              "3   4063   @@3002894  ...      ie  [1, 1, 0, 0, 1, 1, 0]\n",
+              "4   4089  @@25597822  ...      pk  [0, 1, 0, 0, 0, 0, 0]\n",
+              "\n",
+              "[5 rows x 6 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 94
         }
       ]
     },
@@ -369,7 +444,7 @@
         "\t\tfor pi in p:\n",
         "\t\t\toutf.write(','.join([str(k) for k in pi])+'\\n')"
       ],
-      "execution_count": 11,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -390,10 +465,10 @@
       },
       "source": [
         "# first, we need to create the res/ and ref/ folders which the evaluator expects\n",
-        "!mkdir ref\n",
-        "!mkdir res"
+        "!rm -r ref res\n",
+        "!mkdir ref res"
       ],
-      "execution_count": 12,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -404,7 +479,7 @@
       "source": [
         "dpm.load_test()"
       ],
-      "execution_count": 13,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -416,7 +491,7 @@
         "preds_task1 = [[random.randint(0,1)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task1, os.path.join('res/', 'task1.txt'))"
       ],
-      "execution_count": 14,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -428,7 +503,7 @@
         "preds_task2 = [[random.choice([0,1]) for k in range(7)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task2, os.path.join('res/', 'task2.txt'))"
       ],
-      "execution_count": 15,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -460,11 +535,11 @@
       },
       "source": [
         "# for subtask 1\n",
-        "labels2file(dpm.train_task1_df.labels.apply(lambda x:[x]).tolist(), os.path.join('ref/', 'task1.txt'))\n",
+        "labels2file(dpm.train_task1_df.label.apply(lambda x:[x]).tolist(), os.path.join('ref/', 'task1.txt'))\n",
         "# and for subtask 2\n",
-        "labels2file(dpm.train_task2_df.labels.tolist(), os.path.join('ref/', 'task2.txt'))"
+        "labels2file(dpm.train_task2_df.label.tolist(), os.path.join('ref/', 'task2.txt'))"
       ],
-      "execution_count": 16,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -486,7 +561,7 @@
         "# as arguments\n",
         "!python3 evaluation.py . ."
       ],
-      "execution_count": 17,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -496,29 +571,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P9Eu-lCVDE3O",
-        "outputId": "e2817aa9-fcf6-4e18-eb34-8565ec30f931"
+        "outputId": "dc76d9d8-8e86-4dba-ce09-8f69a46b8159"
       },
       "source": [
         "# And get the results\n",
         "!cat scores.txt"
       ],
-      "execution_count": 18,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "task1_precision:0.0929012923768496\n",
-            "task1_recall:0.49500998003992014\n",
-            "task1_f1:0.15644220154549757\n",
-            "task2_unb:0.5958847736625514\n",
-            "task2_sha:0.30173564753004006\n",
-            "task2_pre:0.2865412445730825\n",
-            "task2_aut:0.28885832187070154\n",
-            "task2_met:0.4570837642192348\n",
-            "task2_com:0.27113702623906705\n",
-            "task2_the:0.0761904761904762\n",
-            "task2_avg:0.32534732204073624\n"
+            "task1_precision:0.09536423841059603\n",
+            "task1_recall:0.5075528700906344\n",
+            "task1_f1:0.16056068811723478\n",
+            "task2_unb:0.3300423131170662\n",
+            "task2_sha:0.570957095709571\n",
+            "task2_pre:0.27900146842878115\n",
+            "task2_aut:0.31092436974789917\n",
+            "task2_met:0.474468085106383\n",
+            "task2_com:0.3105950653120464\n",
+            "task2_the:0.06367041198501873\n",
+            "task2_avg:0.3342369727723951\n"
           ]
         }
       ]
