--- a/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
+++ b/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
@@ -36,7 +36,7 @@
         "import os\n",
         "from urllib import request"
       ],
-      "execution_count": 89,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6MWC6jV16zt6",
-        "outputId": "fadb2fb4-6394-48dc-ab65-10ff82a5ce98"
+        "outputId": "a9461c66-1a4c-4c1a-db7e-1ee7380fa6ee"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/dont_patronize_me.py\"\n",
@@ -90,7 +90,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 90,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VrDVHr6SAv0I",
-        "outputId": "6870b61b-efe1-4149-d3dd-e1a9bfaed988"
+        "outputId": "3fa5aa53-8876-4e35-86a1-bd56974ba5b8"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/evaluation.py\"\n",
@@ -130,7 +130,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 91,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "# For now, you can just use the dataset for Subtask 1, which the code will load without labels.\n",
         "dpm = DontPatronizeMe('.', 'dontpatronizeme_pcl.tsv')"
       ],
-      "execution_count": 92,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -185,18 +185,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 348
         },
         "id": "xBNfZFPq6VgX",
-        "outputId": "4a5df1f2-0fb1-4a4b-8ecf-17519e48292f"
+        "outputId": "6011f5ba-3cca-4598-d0ba-1ccb5acd4aa2"
       },
       "source": [
         "# This method loads the subtask 1 data\n",
         "dpm.load_task1()\n",
         "# which we can then access as a dataframe\n",
-        "dpm.train_task1_df.head()"
+        "dpm.train_task1_df.head(10)"
       ],
-      "execution_count": 93,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,6 +280,56 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>@@9382277</td>\n",
+              "      <td>in-need</td>\n",
+              "      <td>in</td>\n",
+              "      <td>to bring down high blood sugar levels , insuli...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7</td>\n",
+              "      <td>@@7562079</td>\n",
+              "      <td>refugee</td>\n",
+              "      <td>za</td>\n",
+              "      <td>the european union is making an historic mista...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8</td>\n",
+              "      <td>@@23663488</td>\n",
+              "      <td>hopeless</td>\n",
+              "      <td>nz</td>\n",
+              "      <td>\"\"\" they 're either hopeless for being beaten ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>9</td>\n",
+              "      <td>@@3449225</td>\n",
+              "      <td>homeless</td>\n",
+              "      <td>ph</td>\n",
+              "      <td>nueva era , ilocos norte - no family shall be ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>10</td>\n",
+              "      <td>@@2485090</td>\n",
+              "      <td>in-need</td>\n",
+              "      <td>nz</td>\n",
+              "      <td>his spokesman said the kremlin needed more inf...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -291,12 +341,17 @@
               "2      3  @@16584954  ...     0          0\n",
               "3      4   @@7811231  ...     0          0\n",
               "4      5   @@1494111  ...     0          0\n",
+              "5      6   @@9382277  ...     0          0\n",
+              "6      7   @@7562079  ...     0          0\n",
+              "7      8  @@23663488  ...     0          0\n",
+              "8      9   @@3449225  ...     0          1\n",
+              "9     10   @@2485090  ...     0          0\n",
               "\n",
-              "[5 rows x 7 columns]"
+              "[10 rows x 7 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 107
         }
       ]
     },
@@ -316,18 +371,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 216
+          "height": 366
         },
         "id": "vfLpiw568iCQ",
-        "outputId": "f5cdd415-d13d-4c19-f7aa-844dacc4b077"
+        "outputId": "d2f04809-88aa-4d68-fafb-1ab82046c63f"
       },
       "source": [
         "# Same for subtask 2, we must pass return_one_hot=True to the constructor to get valid labels\n",
         "dpm.load_task2(return_one_hot=True)\n",
         "# which we can then access as a dataframe\n",
-        "dpm.train_task2_df.head()"
+        "dpm.train_task2_df.head(10)"
       ],
-      "execution_count": 94,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,6 +467,51 @@
               "      <td>pk</td>\n",
               "      <td>[0, 1, 0, 0, 0, 0, 0]</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>432</td>\n",
+              "      <td>@@15802146</td>\n",
+              "      <td>he depicts demonstrations by refugees at the b...</td>\n",
+              "      <td>refugee</td>\n",
+              "      <td>nz</td>\n",
+              "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>4177</td>\n",
+              "      <td>@@930041</td>\n",
+              "      <td>the word of god is truth that 's living and ab...</td>\n",
+              "      <td>hopeless</td>\n",
+              "      <td>us</td>\n",
+              "      <td>[0, 1, 0, 0, 1, 0, 0]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>3963</td>\n",
+              "      <td>@@18867357</td>\n",
+              "      <td>chantelle owens , mrs planet 2016 , hosted the...</td>\n",
+              "      <td>in-need</td>\n",
+              "      <td>za</td>\n",
+              "      <td>[0, 1, 1, 0, 1, 0, 0]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>2001</td>\n",
+              "      <td>@@14012804</td>\n",
+              "      <td>t is remiss not to mention here that not all s...</td>\n",
+              "      <td>poor-families</td>\n",
+              "      <td>tz</td>\n",
+              "      <td>[0, 0, 0, 1, 0, 0, 0]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>369</td>\n",
+              "      <td>@@15636898</td>\n",
+              "      <td>\"\"\" people do n't understand the hurt , people...</td>\n",
+              "      <td>women</td>\n",
+              "      <td>ie</td>\n",
+              "      <td>[1, 1, 0, 1, 1, 0, 0]</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -423,12 +523,17 @@
               "2   8330  @@17252299  ...      ng  [0, 0, 0, 1, 0, 0, 0]\n",
               "3   4063   @@3002894  ...      ie  [1, 1, 0, 0, 1, 1, 0]\n",
               "4   4089  @@25597822  ...      pk  [0, 1, 0, 0, 0, 0, 0]\n",
+              "5    432  @@15802146  ...      nz  [0, 0, 0, 0, 1, 0, 0]\n",
+              "6   4177    @@930041  ...      us  [0, 1, 0, 0, 1, 0, 0]\n",
+              "7   3963  @@18867357  ...      za  [0, 1, 1, 0, 1, 0, 0]\n",
+              "8   2001  @@14012804  ...      tz  [0, 0, 0, 1, 0, 0, 0]\n",
+              "9    369  @@15636898  ...      ie  [1, 1, 0, 1, 1, 0, 0]\n",
               "\n",
-              "[5 rows x 6 columns]"
+              "[10 rows x 6 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 108
         }
       ]
     },
@@ -444,7 +549,7 @@
         "\t\tfor pi in p:\n",
         "\t\t\toutf.write(','.join([str(k) for k in pi])+'\\n')"
       ],
-      "execution_count": 95,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -468,7 +573,7 @@
         "!rm -r ref res\n",
         "!mkdir ref res"
       ],
-      "execution_count": 96,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -479,7 +584,7 @@
       "source": [
         "dpm.load_test()"
       ],
-      "execution_count": 97,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -491,7 +596,7 @@
         "preds_task1 = [[random.randint(0,1)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task1, os.path.join('res/', 'task1.txt'))"
       ],
-      "execution_count": 98,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -503,7 +608,7 @@
         "preds_task2 = [[random.choice([0,1]) for k in range(7)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task2, os.path.join('res/', 'task2.txt'))"
       ],
-      "execution_count": 99,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -539,7 +644,7 @@
         "# and for subtask 2\n",
         "labels2file(dpm.train_task2_df.label.tolist(), os.path.join('ref/', 'task2.txt'))"
       ],
-      "execution_count": 100,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -561,7 +666,7 @@
         "# as arguments\n",
         "!python3 evaluation.py . ."
       ],
-      "execution_count": 101,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -571,29 +676,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P9Eu-lCVDE3O",
-        "outputId": "dc76d9d8-8e86-4dba-ce09-8f69a46b8159"
+        "outputId": "533d41a9-23f1-453c-c2be-3d66d4ee9cc3"
       },
       "source": [
         "# And get the results\n",
         "!cat scores.txt"
       ],
-      "execution_count": 102,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "task1_precision:0.09536423841059603\n",
-            "task1_recall:0.5075528700906344\n",
-            "task1_f1:0.16056068811723478\n",
-            "task2_unb:0.3300423131170662\n",
-            "task2_sha:0.570957095709571\n",
-            "task2_pre:0.27900146842878115\n",
-            "task2_aut:0.31092436974789917\n",
-            "task2_met:0.474468085106383\n",
-            "task2_com:0.3105950653120464\n",
-            "task2_the:0.06367041198501873\n",
-            "task2_avg:0.3342369727723951\n"
+            "task1_precision:0.09855724189619637\n",
+            "task1_recall:0.5297079556898288\n",
+            "task1_f1:0.16619273301737758\n",
+            "task2_unb:0.3008356545961003\n",
+            "task2_sha:0.597682119205298\n",
+            "task2_pre:0.28898426323319026\n",
+            "task2_aut:0.2898134863701578\n",
+            "task2_met:0.5087900723888313\n",
+            "task2_com:0.29742033383915023\n",
+            "task2_the:0.060836501901140684\n",
+            "task2_avg:0.3349089187905527\n"
           ]
         }
       ]
