fix column label mismatch

--- a/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
+++ b/semeval-2022/Semeval_2022_Task_4_Demo.ipynb
@@ -3,26 +3,16 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Semeval_2022_Task_4_Demo.ipynb",
+      "name": "Semeval 2022 - Task 4 - Demo",
       "provenance": [],
       "collapsed_sections": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "name": "python"
     }
   },
   "cells": [
@@ -36,7 +26,7 @@
         "import os\n",
         "from urllib import request"
       ],
-      "execution_count": 103,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -79,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6MWC6jV16zt6",
-        "outputId": "a9461c66-1a4c-4c1a-db7e-1ee7380fa6ee"
+        "outputId": "5ab6cd89-6020-4620-bdf4-f4149dfa3dd3"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/dont_patronize_me.py\"\n",
@@ -90,7 +80,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 104,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VrDVHr6SAv0I",
-        "outputId": "3fa5aa53-8876-4e35-86a1-bd56974ba5b8"
+        "outputId": "71e4b7ed-d2a0-4d0d-ab2e-baea899f0915"
       },
       "source": [
         "module_url = f\"https://raw.githubusercontent.com/Perez-AlmendrosC/dontpatronizeme/master/semeval-2022/evaluation.py\"\n",
@@ -130,7 +120,7 @@
         "  a = f.read()\n",
         "  outf.write(a.decode('utf-8'))"
       ],
-      "execution_count": 105,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,13 +150,13 @@
       "source": [
         "from dont_patronize_me import DontPatronizeMe\n",
         "# Initialize a dpm (Don't Patronize Me) object.\n",
-        "# It takes two arguments as input: \n",
-        "# (1) Path to the training set, which is the root directory of this notebook.\n",
-        "# (2) Path to the test set, which will be released when the evaluation phase begins. \n",
-        "# For now, you can just use the dataset for Subtask 1, which the code will load without labels.\n",
+        "# It takes two areguments as input: \n",
+        "# (1) Path to the directory containing the training set files, which is the root directory of this notebook.\n",
+        "# (2) Path to the test set, which will be released when the evaluation phase begins. In this example, \n",
+        "# we use the dataset for Subtask 1, which the code will load without labels.\n",
         "dpm = DontPatronizeMe('.', 'dontpatronizeme_pcl.tsv')"
       ],
-      "execution_count": 106,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -177,7 +167,7 @@
       "source": [
         "# Load Subtask 1 data\n",
         "\n",
-        "Note that the original dataset contains fine-grained tags (0 to 4, both inclusive). The data manager we provide collapses them into binary labels, which is the labeling we use for the task."
+        "Note that the original dataset contains fine-grained tags (0 to 4, both inclusive). The interface we provide collapses them into binary labels, which is the labeling we use for the task."
       ]
     },
     {
@@ -185,18 +175,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 348
+          "height": 198
         },
         "id": "xBNfZFPq6VgX",
-        "outputId": "6011f5ba-3cca-4598-d0ba-1ccb5acd4aa2"
+        "outputId": "fd3cfd7d-217f-4c10-92b7-c814e868aa88"
       },
       "source": [
         "# This method loads the subtask 1 data\n",
         "dpm.load_task1()\n",
         "# which we can then access as a dataframe\n",
-        "dpm.train_task1_df.head(10)"
+        "dpm.train_task1_df.head()"
       ],
-      "execution_count": 107,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,56 +270,6 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>6</td>\n",
-              "      <td>@@9382277</td>\n",
-              "      <td>in-need</td>\n",
-              "      <td>in</td>\n",
-              "      <td>to bring down high blood sugar levels , insuli...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>7</td>\n",
-              "      <td>@@7562079</td>\n",
-              "      <td>refugee</td>\n",
-              "      <td>za</td>\n",
-              "      <td>the european union is making an historic mista...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>8</td>\n",
-              "      <td>@@23663488</td>\n",
-              "      <td>hopeless</td>\n",
-              "      <td>nz</td>\n",
-              "      <td>\"\"\" they 're either hopeless for being beaten ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>9</td>\n",
-              "      <td>@@3449225</td>\n",
-              "      <td>homeless</td>\n",
-              "      <td>ph</td>\n",
-              "      <td>nueva era , ilocos norte - no family shall be ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>10</td>\n",
-              "      <td>@@2485090</td>\n",
-              "      <td>in-need</td>\n",
-              "      <td>nz</td>\n",
-              "      <td>his spokesman said the kremlin needed more inf...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -341,17 +281,12 @@
               "2      3  @@16584954  ...     0          0\n",
               "3      4   @@7811231  ...     0          0\n",
               "4      5   @@1494111  ...     0          0\n",
-              "5      6   @@9382277  ...     0          0\n",
-              "6      7   @@7562079  ...     0          0\n",
-              "7      8  @@23663488  ...     0          0\n",
-              "8      9   @@3449225  ...     0          1\n",
-              "9     10   @@2485090  ...     0          0\n",
               "\n",
-              "[10 rows x 7 columns]"
+              "[5 rows x 7 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 22
         }
       ]
     },
@@ -371,26 +306,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 366
+          "height": 198
         },
         "id": "vfLpiw568iCQ",
-        "outputId": "d2f04809-88aa-4d68-fafb-1ab82046c63f"
+        "outputId": "d1a4614f-7ae6-4c7c-d9f5-2d642ddaad71"
       },
       "source": [
-        "# Same for subtask 2, we must pass return_one_hot=True to the constructor to get valid labels\n",
-        "dpm.load_task2(return_one_hot=True)\n",
+        "# Same for subtask 2\n",
+        "dpm.load_task2()\n",
         "# which we can then access as a dataframe\n",
-        "dpm.train_task2_df.head(10)"
+        "dpm.train_task2_df.head()"
       ],
-      "execution_count": 108,
+      "execution_count": 23,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'Authority_voice': 0, 'Unbalanced_power_relations': 1, 'Shallow_solution': 2, 'Presupposition': 3, 'Compassion': 4, 'Metaphors': 5, 'The_poorer_the_merrier': 6}\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -467,51 +395,6 @@
               "      <td>pk</td>\n",
               "      <td>[0, 1, 0, 0, 0, 0, 0]</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>432</td>\n",
-              "      <td>@@15802146</td>\n",
-              "      <td>he depicts demonstrations by refugees at the b...</td>\n",
-              "      <td>refugee</td>\n",
-              "      <td>nz</td>\n",
-              "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>4177</td>\n",
-              "      <td>@@930041</td>\n",
-              "      <td>the word of god is truth that 's living and ab...</td>\n",
-              "      <td>hopeless</td>\n",
-              "      <td>us</td>\n",
-              "      <td>[0, 1, 0, 0, 1, 0, 0]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>3963</td>\n",
-              "      <td>@@18867357</td>\n",
-              "      <td>chantelle owens , mrs planet 2016 , hosted the...</td>\n",
-              "      <td>in-need</td>\n",
-              "      <td>za</td>\n",
-              "      <td>[0, 1, 1, 0, 1, 0, 0]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>2001</td>\n",
-              "      <td>@@14012804</td>\n",
-              "      <td>t is remiss not to mention here that not all s...</td>\n",
-              "      <td>poor-families</td>\n",
-              "      <td>tz</td>\n",
-              "      <td>[0, 0, 0, 1, 0, 0, 0]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>369</td>\n",
-              "      <td>@@15636898</td>\n",
-              "      <td>\"\"\" people do n't understand the hurt , people...</td>\n",
-              "      <td>women</td>\n",
-              "      <td>ie</td>\n",
-              "      <td>[1, 1, 0, 1, 1, 0, 0]</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -523,17 +406,12 @@
               "2   8330  @@17252299  ...      ng  [0, 0, 0, 1, 0, 0, 0]\n",
               "3   4063   @@3002894  ...      ie  [1, 1, 0, 0, 1, 1, 0]\n",
               "4   4089  @@25597822  ...      pk  [0, 1, 0, 0, 0, 0, 0]\n",
-              "5    432  @@15802146  ...      nz  [0, 0, 0, 0, 1, 0, 0]\n",
-              "6   4177    @@930041  ...      us  [0, 1, 0, 0, 1, 0, 0]\n",
-              "7   3963  @@18867357  ...      za  [0, 1, 1, 0, 1, 0, 0]\n",
-              "8   2001  @@14012804  ...      tz  [0, 0, 0, 1, 0, 0, 0]\n",
-              "9    369  @@15636898  ...      ie  [1, 1, 0, 1, 1, 0, 0]\n",
               "\n",
-              "[10 rows x 6 columns]"
+              "[5 rows x 6 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 23
         }
       ]
     },
@@ -549,7 +427,7 @@
         "\t\tfor pi in p:\n",
         "\t\t\toutf.write(','.join([str(k) for k in pi])+'\\n')"
       ],
-      "execution_count": 109,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -566,15 +444,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kljiRAHxA1zh"
+        "id": "kljiRAHxA1zh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7f1607e-6614-46e9-b832-52854be25a1c"
       },
       "source": [
-        "# first, we need to create the res/ and ref/ folders which the evaluator expects\n",
-        "!rm -r ref res\n",
+        "# first, we need to create the res/ and ref/ folders, which the evaluator expects\n",
         "!mkdir ref res"
       ],
-      "execution_count": 110,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mkdir: cannot create directory ‘ref’: File exists\n",
+            "mkdir: cannot create directory ‘res’: File exists\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -584,7 +474,7 @@
       "source": [
         "dpm.load_test()"
       ],
-      "execution_count": 111,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -593,10 +483,11 @@
         "id": "V6S7L0BiT-yD"
       },
       "source": [
+        "# random predictions for task 1\n",
         "preds_task1 = [[random.randint(0,1)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task1, os.path.join('res/', 'task1.txt'))"
       ],
-      "execution_count": 112,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -605,10 +496,11 @@
         "id": "lsFszPYdUIUO"
       },
       "source": [
+        "# random predictions for task 2\n",
         "preds_task2 = [[random.choice([0,1]) for k in range(7)] for k in range(0,len(dpm.test_set))]\n",
         "labels2file(preds_task2, os.path.join('res/', 'task2.txt'))"
       ],
-      "execution_count": 113,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -639,12 +531,13 @@
         "id": "FVfa-UhvCa2v"
       },
       "source": [
-        "# for subtask 1\n",
+        "# for subtask 1 (we convert our list of labels into a list of lists to make \n",
+        "# it compatible with the labels2file function)\n",
         "labels2file(dpm.train_task1_df.label.apply(lambda x:[x]).tolist(), os.path.join('ref/', 'task1.txt'))\n",
         "# and for subtask 2\n",
         "labels2file(dpm.train_task2_df.label.tolist(), os.path.join('ref/', 'task2.txt'))"
       ],
-      "execution_count": 114,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -663,10 +556,10 @@
       },
       "source": [
         "# Now, we can just call the official scorer, which takes an input_directory and an output_directory\n",
-        "# as arguments\n",
+        "# as arguments. In this example, both will be the root directory of this notebook.\n",
         "!python3 evaluation.py . ."
       ],
-      "execution_count": 115,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -676,29 +569,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P9Eu-lCVDE3O",
-        "outputId": "533d41a9-23f1-453c-c2be-3d66d4ee9cc3"
+        "outputId": "c5f7c122-5f76-499f-8403-7d571b0512df"
       },
       "source": [
-        "# And get the results\n",
+        "# The scorer generated a results file called \"scores.txt\". \n",
+        "# We can now see the performance of a random baseline on the training set.\n",
         "!cat scores.txt"
       ],
-      "execution_count": 116,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "task1_precision:0.09855724189619637\n",
-            "task1_recall:0.5297079556898288\n",
-            "task1_f1:0.16619273301737758\n",
-            "task2_unb:0.3008356545961003\n",
-            "task2_sha:0.597682119205298\n",
-            "task2_pre:0.28898426323319026\n",
-            "task2_aut:0.2898134863701578\n",
-            "task2_met:0.5087900723888313\n",
-            "task2_com:0.29742033383915023\n",
-            "task2_the:0.060836501901140684\n",
-            "task2_avg:0.3349089187905527\n"
+            "task1_precision:0.09203054630898766\n",
+            "task1_recall:0.473313192346425\n",
+            "task1_f1:0.1540983606557377\n",
+            "task2_unb:0.301255230125523\n",
+            "task2_sha:0.5839536807278742\n",
+            "task2_pre:0.291350531107739\n",
+            "task2_aut:0.2896174863387978\n",
+            "task2_met:0.48283038501560877\n",
+            "task2_com:0.2952243125904486\n",
+            "task2_the:0.06177606177606177\n",
+            "task2_avg:0.3294296696688647\n"
           ]
         }
       ]
